# Heart-UDIP

./: .gitignore  CITATION.cff  LICENSE  Post_GWAS_analysis.R  README.md  pyproject.toml  requirements.txt
DataPreprocessing/: build_registration_template.py  crop_nii_files.py  dicom2nii.py  registration_with_template.py
GWAS/: calculate_GWAS.py  correlation_calculation.py  minP_calculation.py  umap_plot.py
PerDI/: README.md  __init__.py  core.py  stability.py
PerDI/examples/: config_template.yaml  example_compute_weights.py  example_perdi_map.py  example_regular_perdi.py  example_stability.py
configs/: example_paths.env  post_gwas_4ch.yaml  post_gwas_overlap.csv
docs/: reproducibility.md
evalutation/: SSIMandPSNR.py  extract_phenotypes.py  perturbation_calculation.py  perturbation_plot.py
model/: cineMAE_train.py  model.py
model_weights/: readme
scripts/: pipeline_test_with_other_data.py  post_gwas_analysis.R
src/heart_udip/: __init__.py
src/heart_udip/evaluation/: __init__.py  extract_latents.py  perturbation_analysis.py  plot_perturbation.py  reconstruction_metrics.py
src/heart_udip/gwas/: __init__.py  correlation_analysis.py  minp_analysis.py  prepare_fastgwa_inputs.py  umap_plot.py
src/heart_udip/models/: __init__.py  cnn3d.py  train_cinemae.py
src/heart_udip/preprocessing/: __init__.py  build_template.py  crop_nifti.py  dicom_to_nifti.py  register_to_template.py
