[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heart-udip"
version = "0.1.0"
description = "Research workflows for unsupervised deep imaging phenotyping and downstream cardiac GWAS."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Heart-UDIP authors" }
]
license = { text = "MIT" }
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
